# VedicAstrologer

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/combine_astro_chart_data/: astro_chart_data_combiner.py
src/data_loaders/: utils.py
src/data_loaders/astro_api_data_loader/: astro_api_sdk.py  planetary_locations_finder.py
src/data_loaders/astro_sage_birth_charts/: astro_sage_web_scraper.py  processed_birth_chart_loader.py
src/data_loaders/astro_sage_data_loader/: astro_sage_web_scraper.py  processed_astro_sage_data_loder.py
src/data_loaders/astro_seek_birth_charts/: astro_seek_web_scraper.py  processed_birth_chart_data_loader.py
src/data_loaders/astro_seek_data_loader/: astro_seek_web_scraper.py  processed_astro_seek_data_loader.py
src/data_loaders/astro_seek_loader/: celebrity_asto_chart_web_scraper.py
src/data_loaders/combine_astro_chart_data/: astro_chart_data_combiner.py
src/data_loaders/planetary_positions/: astrology_api_loader.py  processed_plantary_positions_loader.py
src/dimensionality_reduction/: pca_transformer.py  tsne_transformer.py
src/vedic_astrology_classifiers/: classifier.py  logitic_regression_classifier.py  random_forest_classifier.py  svm_classifier.py  xgboost_classifier.py
src/vedic_astrology_dataset/: birth_chart_data_aggregator.py  vedic_astrology_dataset_creator.py
